[package]
name = "led-lamp2"
version = "0.1.0"
authors = ["Kay Hannay <klinux@hannay.de>"]
edition = "2021"
license = "MIT"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.15.0", features=["embassy","async","embassy-time-timg0"] }
esp-backtrace = { version = "0.11.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32c3","log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { version = "0.3.0", features = ["esp32c3", "wifi", "embassy-net", "async"] }
smoltcp = { version = "0.11.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.27.1", default-features = false, features = [] }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }
embassy-time = "0.3.0"
embassy-executor = { version= "0.5.0", features = ["nightly", "integrated-timers","arch-riscv32", "executor-thread"] }
static_cell = { version = "2.0.0", features = ["nightly"] }
embassy-net = { version = "0.4.0", features = ["tcp","proto-ipv4","medium-ethernet","dhcpv4", "dns", "log", "udp", "medium-ip" ] }
embassy-net-driver = { version = "0.2.0"}
reqwless = { version = "0.11.0", features = ["alloc", "log"] }
picoserve = { version = "0.9.1", features = ["embassy"] }
smart-leds = "0.4.0"
esp-hal-smartled = {version = "0.8.0", features = ["esp32c3"]}
palette = { version = "0.7.3", default-features = false, features = ["libm"] }
esp-hal-common = "0.15.0"
embassy-sync = "0.5.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
